--- a/luigi's.CSS
+++ b/luigi's.CSS
@@ -1,8 +1,9 @@
 * { box-sizing: border-box; }
 body { background-color: #FFFFFF;
        color: #666666;
-	   font-family: Verdana, Arial, sans-serif;
+	    font-family: Verdana, Arial, sans-serif;
        margin: 0;
+       height: 100%;
 }
 
 header { background-color: #ff8800;
@@ -139,4 +140,52 @@ tr:nth-of-type(even) { background-color: #DFEDF8; }
   position: absolute;
 }
 
+.html {
+  height: 100%;
+}
 
+.banner-area {
+  width: 100%;
+  padding:40px 0;
+  text-align: center;
+  background: #33cccc;
+  color: white;
+}
+
+.banner-area p {
+  font-size: 1.1em;
+  font-weight: 100;
+  letter-spacing: 3px;
+}
+
+.split {
+  height: 50%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left {
+  left: 0;
+  background-color: #111;
+}
+
+.right {
+  right: 0;
+  background-color: #111116;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
