Organized output of items in Menu Input raw data from Hunter's GitHub contribution Set up framework for quantity forms in Menu Added back and continue buttons to Menu + Cart

--- a/luigis_site/templates/luigis_site/Cart.html
+++ b/luigis_site/templates/luigis_site/Cart.html
@@ -26,6 +26,13 @@
         <div id="wrapper">
             <div id="newyork"></div>
             <main>
+                <form id="buttons" class="back" action="http://127.0.0.1:8000/menu/">
+                    <button type="submit">Back</button>
+                </form>
+                <form id="buttons" class="continue" action="http://127.0.0.1:8000/checkout/">
+                    <button type="submit">Continue</button>
+                </form>
+                <br><br>
             </main>
             <footer>
                 <br>
