--- a/luigis_site/static/css/luigis_site.css
+++ b/luigis_site/static/css/luigis_site.css
@@ -235,6 +235,11 @@ figure { display: grid;
 figcaption { font-weight: bold;
              font-size: 1.5em; }
 
+
+#buttons {padding: 5px;max-width: 100px;}
+#buttons.back {float: left;}
+#buttons.continue {float: right;}
+
 #mobile { display: inline; }
 
 #desktop { display: none; }
