--- a/Luigi's Pizza Project Final/Luigi's.css
+++ b/Luigi's Pizza Project Final/Luigi's.css
@@ -70,8 +70,8 @@ nav li { padding-top: 0.5em;
 
 main { padding-left: 1em;
        padding-right: 1em;
-       padding-bottom: 0;
-       padding-top: 0;
+       padding-bottom: 1em;
+       padding-top: 1em;
        display: block;
 }
 
