--- a/luigis_site/static/css/luigis_site.css
+++ b/luigis_site/static/css/luigis_site.css
@@ -146,6 +146,15 @@ tr:nth-of-type(even) { background-color: #DFEDF8; }
 #wrapper { background-color: #75c1ee;
 }
 
+#pizza1 { height: 300px;
+       width: 500px;
+       background-size: 200%;
+       background-image: url(pizza1.jpg);
+       background-repeat: no-repeat;
+       background-position: center;
+       float: right; 
+}
+
 #chicago { height: 300px;
             background-image: url(home-page.jpg);
   			background-repeat: no-repeat;
